<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.skymatic</groupId>
	<artifactId>fuse-panama</artifactId>
	<packaging>pom</packaging>
	<version>0.1.0-SNAPSHOT</version>

	<modules>
		<module>api</module>
		<module>examples</module>
	</modules>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.jetbrains</groupId>
				<artifactId>annotations</artifactId>
				<version>23.0.0</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<release>18</release>
						<encoding>UTF-8</encoding>
						<showWarnings>true</showWarnings>
						<compilerArgs>
							<arg>--add-modules</arg>
							<arg>jdk.incubator.foreign</arg>
						</compilerArgs>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-enforcer-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>3.0.0</version>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>mac</id>
			<activation>
				<os>
					<family>mac</family>
				</os>
			</activation>
			<modules>
				<module>mac</module>
			</modules>
		</profile>

		<profile>
			<id>linux-x64</id>
			<activation>
				<os>
					<family>unix</family>
					<name>Linux</name>
					<arch>x86_64</arch>
				</os>
			</activation>
			<modules>
				<module>linux-x64</module>
			</modules>
		</profile>

		<profile>
			<id>win-amd64</id>
			<activation>
				<os>
					<family>windows</family>
					<arch>amd64</arch>
				</os>
			</activation>
			<modules>
				<module>win-amd64</module>
			</modules>
		</profile>
	</profiles>

</project>